src/instrumentation/snapshots/bombadil__instrumentation__js__tests__instrument_source_code_ternary_await.snap
---
source: src/instrumentation/js.rs
expression: code
---
window.__bombadil__ = window.__bombadil__ || {
    edges_previous: new Uint8Array(65536),
    edges_current: new Uint8Array(65536),
    previous: 0,
};
async function example(a) {
	return a ? await (async () => {
		__bombadil__.edges_current[(0x76be999e3e25b400 ^ __bombadil__.previous) % 65536] += 1;
		__bombadil__.previous = 0x76be999e3e25b400 >> 1;
		return await bar();
	})() : await (async () => {
		__bombadil__.edges_current[(0x7359aa1156ce8800 ^ __bombadil__.previous) % 65536] += 1;
		__bombadil__.previous = 0x7359aa1156ce8800 >> 1;
		return await baz();
	})();
}
