src/instrumentation/snapshots/bombadil__instrumentation__js__tests__instrument_source_code_ternary_comma_operator.snap
---
source: src/instrumentation/js.rs
expression: code
---
window.__bombadil__ = window.__bombadil__ || {
    edges_previous: new Uint8Array(65536),
    edges_current: new Uint8Array(65536),
    previous: 0,
};
let x = 1;
let y = 2;
let z = 3;
function example(a, b, c) {
	return a ? (() => {
		__bombadil__.edges_current[(0x76be999e3e25b400 ^ __bombadil__.previous) % 65536] += 1;
		__bombadil__.previous = 0x76be999e3e25b400 >> 1;
		return x = y, b;
	})() : (() => {
		__bombadil__.edges_current[(0x7359aa1156ce8800 ^ __bombadil__.previous) % 65536] += 1;
		__bombadil__.previous = 0x7359aa1156ce8800 >> 1;
		return y = z, c;
	})();
}
console.log(example(true, 1, 2), x, y, z);
